syntax = "proto3";

package yuhaiin.bypass;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/config/bypass";

enum mode {
  bypass = 0;
  direct = 1;
  proxy = 2;
  block = 3;
}

message config {
  mode tcp = 3 [ json_name = "tcp" ];
  mode udp = 4 [ json_name = "udp" ];
  string bypass_file = 2 [ json_name = "bypass_file" ];
  repeated mode_config custom_rule_v3 = 7 [ json_name = "custom_rule_v3" ];
}

message mode_config {
  repeated string hostname = 3 [ json_name = "hostname" ];
  mode mode = 1 [ json_name = "mode" ];
  string tag = 2 [ json_name = "tag" ];
}